unpackaged/main/default/objects/Centro__Message_Queue__c/Centro__Message_Queue__c.object-meta.xml
<CustomObject>
    <description>Log of every message sent by the Centro Salesforce App and any error messages encountered.</description>
    <label>Message Queue</label>
    <nameField>
        <displayFormat>MQ-{0000}</displayFormat>
        <label>Message Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>