unpackaged/main/default/objects/Centro__Message_Queue__c/fields/Centro__Conversation_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Conversation_Name__c</fullName>
    <label>Conversation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>