unpackaged/main/default/objects/Centro__Message_Queue__c/fields/Centro__Payload__c.field-meta.xml
<CustomField>
    <fullName>Centro__Payload__c</fullName>
    <description>JSON payload of queued message</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>