unpackaged/main/default/objects/Centro__Message_Queue__c/fields/Centro__Reason__c.field-meta.xml
<CustomField>
    <fullName>Centro__Reason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>