unpackaged/main/default/objects/Centro__Message_Queue__c/fields/Centro__Status__c.field-meta.xml
<CustomField>
    <fullName>Centro__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>