unpackaged/main/default/objects/Centro__Message_Queue__c/fields/Channel_Link__c.field-meta.xml
<CustomField>
    <fullName>Channel_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://retooled.slack.com/archives/&quot;&amp;Centro__ChannelId__c,&quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Link</label>
    <type>Text</type>
</CustomField>