unpackaged/main/default/objects/Centro__Message_Queue__c/listViews/Centro__Failed_Messages.listView-meta.xml
<ListView>
    <fullName>Centro__Failed_Messages</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Centro__Status__c</columns>
    <columns>Centro__Reason__c</columns>
    <columns>Centro__ChannelId__c</columns>
    <columns>Centro__Message_TS__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Centro__Status__c</field>
        <operation>equals</operation>
        <value>API Error,Failed</value>
    </filters>
    <label>Failed Messages</label>
</ListView>