unpackaged/main/default/objects/Centro__Message_Queue__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Centro__Status__c</columns>
    <columns>Centro__Reason__c</columns>
    <columns>Centro__Conversation_Name__c</columns>
    <columns>Message_Link__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Centro__Interview_GUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Message Queue</label>
</ListView>